fix: prevent horizontal scroll

--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -11,6 +11,7 @@ body {
   margin: auto;
   background-color: var(--bg-color);
   color: var(--text-color);
+  overflow-x: hidden;
 }
 
 .container {
